# ViTAA

./: .gitignore  AGENTS.md  pyproject.toml
env/: .env.example
tools/: test_net.py  train_net.py
tools/cuhkpedes/: convert_to_json.py  prepare_prerequisites.py
vitaa/config/: paths_catalog.py
vitaa/data/datasets/: cuhkpedes.py
vitaa/utils/: paths.py
